test/tests/stages/6_statements_and_conditional_expressions/valid/assign_ternary.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  identifier(a)
  =
  const int(1)
  ?
  const int(2)
  :
  const int(3)
  ;
  return
  identifier(a)
  ;
  }
