test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/duplicate_labels.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  identifier(label)
  :
  identifier(x)
  =
  const int(1)
  ;
  identifier(label)
  :
  return
  const int(2)
  ;
  }
